# transcribe-demo

./: CMakeLists.txt  audio-capture.cpp  main.cpp  record.cpp
